# WikiPay

./: .gitignore  ABI-FIX-APPLIED.md  DEPLOY-ARBITRUM-ONE.md  DEPLOYMENT-COMPLETE.md  LICENSE  PAYMENT-FACILITATOR-NEEDED.md  QUICKSTART-PINATA.md  README.md  STYLUS-ISSUES.md  STYLUS-STATUS.md  X402-STANDARD-COMPLIANCE.md
contracts/: .env.example  Cargo.toml  DEPLOY-GUIDE.md  DEPLOYMENT-STATUS.md  DEPLOYMENT.md  README.md  deploy-output.txt  stylus.toml  test-contract.js  wasm_hex.txt  wikipay-abi.json
contracts-solidity/: .env.example  .gitignore  hardhat.config.js  package-lock.json  package.json
contracts-solidity/cache/: solidity-files-cache.json
contracts/.cargo/: config.toml
contracts/solidity/: WikiPayX402.sol
contracts/src/: lib.rs  lib_backup.rs  lib_full_broken.rs  lib_minimal.rs  main.rs
contracts/stylus-template/: Cargo.toml
docs/: ARBITRUM-ONE-DEPLOYMENT.md  ARBITRUM-X402-FACILITATOR.md  ARTICLES-FEATURE.md  CONTRACT-ISSUES.md  DEPLOYMENT.md  IMPLEMENTATION-PLAN.md  IPFS-MIGRATION-SUMMARY.md  MAINNET-DEPLOYMENT-SUCCESS.md  PINATA-SETUP.md  README.md  STORAGE-ARCHITECTURE.md  STORAGE-OPTIONS.md  STYLUS-ISSUES.md  TESTING-SUMMARY.md  X402-DEPLOYMENT-SUMMARY.md  X402-FACILITATOR-DESIGN.md  X402-FRONTEND-INTEGRATION.md  X402-IMPLEMENTATION.md  X402-PROTOCOL-COMPLIANCE.md  quick-test-article.md  x402-article.md
frontend/: .env.local.example  GAS-ESTIMATION-ISSUE.md  VERIFY-CONTRACT.md  package-lock.json  package.json  tsconfig.json
scripts/: check-usdc-eip3009.js  publish-eip8004.js
tests/: TEST-COMMANDS.md  test-contract.sh
(+21 files in other folders)
