[package]
name = "wikipay-contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
stylus-sdk = "0.4.2"
alloy-primitives = "0.7.0"
alloy-sol-types = "0.7.0"
mini-alloc = "0.4.2"

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "z"

[lib]
crate-type = ["cdylib"]
