[package]
name = "wikipay-contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
stylus-sdk = "=0.9.0"
alloy-primitives = "=0.8.20"
alloy-sol-types = "=0.8.20"
ruint = "=1.15.0"

[features]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi"]
mini-alloc = ["stylus-sdk/mini-alloc"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = 3

[lib]
crate-type = ["lib", "cdylib"]
